--- a/templates/ana_stock.html
+++ b/templates/ana_stock.html
@@ -19,6 +19,7 @@
     </style>
 <head>
     <title>股票分析輸入</title>
+    <p>Welcome, {{ request.user.username }}! <a href="{% url 'logout_user' %}">Logout</a></p>
 </head>
 <body>
     <h1>股票分析工具</h1>
