--- a/templates/ana_stock.html
+++ b/templates/ana_stock.html
@@ -6,8 +6,18 @@
             color: white;
             text-align: center;
         }
-        .fair {
+        .cheap_to_fair {
+            background-color: blue;
+            color: white;
+            text-align: center;
+        }
+        .fair_to_expensive {
             background-color: yellow;
+            color: black;
+            text-align: center;
+        }
+        .fair {
+            background-color: orange;
             color: black;
             text-align: center;
         }
@@ -26,11 +36,11 @@
     <form method="POST">
         {% csrf_token %}
         <label for="stock_code">股票代號:</label>
-        <input type="text" id="stock_code" name="stock_code" required><br><br>
+        <input type="text" id="stock_code" name="stock_code" value="2330" required><br><br>
         <label for="start_date">分析起始日:</label>
-        <input type="date" id="start_date" name="start_date" required><br><br>
+        <input type="date" id="start_date" name="start_date" value="2024-12-01" required><br><br>
         <label for="end_date">分析結束日:</label>
-        <input type="date" id="end_date" name="end_date" required><br><br>
+        <input type="date" id="end_date" name="end_date" value="2024-12-13" required><br><br>
         <button type="submit">提交</button>
     </form>
 
@@ -40,8 +50,9 @@
         <thead>
             <tr>
                 <th>Method</th>
-                <th>Day 1</th>
-                <th>Day 2</th>
+                {% for day in days %}
+                    <th>{{ day }}</th>
+                {% endfor %}
             </tr>
         </thead>
         <tbody>
