--- a/templates/ana_stock.html
+++ b/templates/ana_stock.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <h1>股票分析工具</h1>
-    <form method="POST">
+    <form method="POST" action="{% url 'save_stock' %}">
         {% csrf_token %}
         <label for="stock_code">股票代號:</label>
         <input type="text" id="stock_code" name="stock_code" value="2330" required><br><br>
@@ -41,7 +41,8 @@
         <input type="date" id="start_date" name="start_date" value="2024-12-01" required><br><br>
         <label for="end_date">分析結束日:</label>
         <input type="date" id="end_date" name="end_date" value="2024-12-13" required><br><br>
-        <button type="submit">提交</button>
+        <button type="submit">提交分析</button>
+        <button type="button" onclick="saveStock()">保存股票代號</button>
     </form>
 
     {% if heatmap_data %}
@@ -67,5 +68,26 @@
         </tbody>
     </table>
     {% endif %}
+
+    <script>
+        function R() {
+            const stockCode = document.getElementById('stock_code').value;
+            fetch("{% url 'save_stock' %}", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "X-CSRFToken": "{{ csrf_token }}"
+                },
+                body: JSON.stringify({ stock_code: stockCode })
+            }).then(response => {
+                if (response.ok) {
+                    alert("股票代號已保存！");
+                } else {
+                    alert("保存失敗！");
+                }
+            });
+        }
+    </script>
 </body>
 </html>
+
