--- a/templates/ana_stock.html
+++ b/templates/ana_stock.html
@@ -33,7 +33,9 @@
 </head>
 <body>
     <h1>股票分析工具</h1>
-    <form method="POST" action="{% url 'save_stock' %}">
+    <p><a href="{% url 'check_save' %}">檢視保存的股票</a></p>
+
+    <form method="POST" action="{% url 'analyze_stock' %}">
         {% csrf_token %}
         <label for="stock_code">股票代號:</label>
         <input type="text" id="stock_code" name="stock_code" value="2330" required><br><br>
@@ -70,7 +72,7 @@
     {% endif %}
 
     <script>
-        function R() {
+        function saveStock() {
             const stockCode = document.getElementById('stock_code').value;
             fetch("{% url 'save_stock' %}", {
                 method: "POST",
