--- a/templates/ana_stock.html
+++ b/templates/ana_stock.html
@@ -27,6 +27,9 @@
             text-align: center;
         }
     </style>
+    <script src="https://code.highcharts.com/highstock/highstock.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 <head>
     <title>股票分析輸入</title>
     <p>Welcome, {{ request.user.username }}! <a href="{% url 'logout_user' %}">Logout</a></p>
